syntax = "proto3";

package utils;

import "google/protobuf/any.proto";
/* import "google/protobuf/timestamp.proto"; */

message Empty {};


message UpdateDto{
string id = 1;
google.protobuf.Any data = 2;

}

message FindAllDto{
    oneof queryFilter{
    Empty empty = 1;
    google.protobuf.Any query = 2;
    }
    optional google.protobuf.Any projection = 3;

}

message FindOneDto{
    oneof queryFilter{
    string id = 1;
    google.protobuf.Any entity = 2;
    }
    optional google.protobuf.Any projection = 3;

  }

message Response{
string status =1;
string message =2;
google.protobuf.Any data =3;
int32 statusCode =4;
}

message Boolean{
  bool  success = 1;
}


message PaginationDto{
int32 page = 1;
int32 skip =2;
}
